fix(frontend/ui): fix margin for chat/gamelist on smaller screens

--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -41,8 +41,12 @@
     .container {
         overflow: visible;
     }
-}
 
+    .content :nth-child(2) {
+        margin-left: 0;
+    }
+}
+    
 .modal-overlay {
     position: fixed;
     top: 0;
