--- a/frontend/src/app/chat/chat.component.css
+++ b/frontend/src/app/chat/chat.component.css
@@ -120,9 +120,3 @@ app-avatar {
 .send-button:active {
     background-color: #639bb8;
 }
-
-@media screen and (max-width: 900px) {
-    :host {
-        margin-left: 0;
-    }
-}
